android studio update 2024.2.1 patch 1

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 android.suppressUnsupportedCompileSdk=32
+#android.defaults.buildfeatures.buildconfig=true
+android.defaults.buildfeatures.buildconfig=false
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
